Three Column Structure Added
Adding 3 column structure to the form
Use "fs-col-3" class for 3 column structure

--- a/css/formStyler.css
+++ b/css/formStyler.css
@@ -8,6 +8,12 @@
 	display: inline-block;
 }
 
+.fs-ele-wrapper.fs-col-3{
+	width: 32%;
+	float:left;
+	display: inline-block;
+}
+
 .fs-ele-wrapper .fs-label{
 	display: inline-block;
 	width:150px;
